<resources>
    <string name="app_name">OPSCOnTime</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username1">Username1</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_category">Select Category</string>
    <string name="save_entry">Save Entry</string>
    <string name="add_photo">Add photo</string>
    <string name="start_time">Start Time</string>
    <string name="name">Name</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_image">Save Image</string>
    <string name="image_description" />
    <string name="view_goals">View Goals</string>
    <string name="add_entries">Add Entries</string>
    <string name="view_entries">View Entries</string>
    <string name="view_category_hours">View Category Hours</string>
    <string name="how_to_navigate">How to Navigate:</string>
    <string name="_1_view_time_entries_nclick_on_the_eye_icon_in_the_bottom_navigation_bar_this_will_take_you_to_a_screen_where_you_can_view_your_time_entries_or_activities_logged_in_the_app_n_n2_add_time_entries_nclick_on_entry_and_pen_icon_in_the_bottom_navigation_bar_this_will_navigate_you_to_a_screen_where_you_can_add_new_time_entries_or_log_new_activities_n_n3_view_goals_ntap_on_the_trophy_icon_in_the_bottom_navigation_bar_you_will_be_directed_to_a_screen_where_you_can_view_and_manage_your_set_goals_or_objectives_n_n4_view_total_hours_nselect_the_view_category_icon_with_the_plus_sign_in_the_bottom_navigation_bar_this_will_lead_you_to_a_screen_where_you_can_view_the_total_hours_spent_on_different_categories_or_activities">1. View Time Entries:\nClick on the Eye icon in the bottom navigation bar. This will take you to a screen where you can view your time entries or activities logged in the app.\n\n2. Add Time Entries:\nClick on Entry and Pen icon in the bottom navigation bar. This will navigate you to a screen where you can add new time entries or log new activities.\n\n3. View Goals:\nTap on the trophy icon in the bottom navigation bar. You will be directed to a screen where you can view and manage your set goals or objectives.\n\n4. View Total Hours:\nSelect the View Category icon with the plus sign in the bottom navigation bar. This will lead you to a screen where you can view the total hours spent on different categories or activities.</string>
    <string name="ontime_is_a_productivity_app_designed_to_help_users_manage_their_time_efficiently_and_effectively">ONTIME is a productivity app designed to help users manage their time efficiently and effectively.</string>
    <string name="welcome_to_our_app">Welcome to Our App!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="pie_chart">pie_chart</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="check_categories_that_meet_goals">Check Categories that Meet Goals</string>


</resources>