<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/menu_view_entries"
        android:icon="@drawable/viewentry"
        android:title="@string/view_entries" />

    <item
        android:icon="@drawable/pen"
        android:id="@+id/menu_add_entries"
        android:title="@string/add_entries" />

    <item

        android:icon="@drawable/trophy"
        android:id="@+id/menu_add_goals"
        android:title="@string/view_goals" />

    <item

        android:icon="@drawable/category"
        android:id="@+id/menu_add_hours"
        android:title="@string/view_category_hours" />

    <item
        android:id="@+id/menu_pie_chart"

        android:title="@string/pie_chart" />
</menu>












