<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedCamera"
    android:background="@drawable/theme_background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="205dp"
        android:layout_height="140dp"
        android:layout_marginStart="100dp"
        android:importantForAccessibility="no"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="231dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/camera"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="146dp" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upload_image"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/buttonSaveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save_image"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="483dp" />



</LinearLayout>